trying to fix z-index

--- a/style.css
+++ b/style.css
@@ -4,18 +4,19 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-columns: 10% 80% 10%;
     grid-template-rows: 1fr 8fr 1fr ;
     grid-template-areas: 
-    "sidenav-left header sidenav-right" 
-    "sidenav-left main sidenav-right" 
-    "sidenav-left footer sidenav-right";
-    height: 100vh;
-    position:absolute;
+    "left header right" 
+    "left main right" 
+    "left footer right";
+    position:absolute; 
     z-index: 1;
     top: 0;
     left: 0;
     right: 0;
+    height: 100vh;
+   
 }
 
 .header-background {
@@ -23,34 +24,87 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
+  /* position: absolute;
+    z-index: 1; */ 
 }
 
 .header {
     grid-area: header;
+    height: 100vh;
+    align-self: center;
+}
+
+
+.right {
+    grid-area: right;
+    opacity: 0;
+}
+
+.left {
+    grid-area: left;
+    opacity: 0;
+}
+
+.sidenav-grid {
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "sidenav-left middle sidenav-right";
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+
+}
+
+.middle {
+    grid-area: middle;
 }
 
 .sidenav-left {
-    grid-area: sidenav-left;
-    z-index: 1;
+grid-area: sidenav-left;
+writing-mode: vertical-rl;
+text-orientation: mixed;
+position: fixed;
+margin-top: 5rem;
+/* z-index: 0; */
 }
 
 .sidenav-right {
     grid-area: sidenav-right;
     writing-mode: vertical-rl;
     text-orientation: mixed;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    position: fixed;
+    margin-top: 5rem;
+    /* z-index: 2; */
 }
 
 i {
     padding-bottom: 1rem;
 }
 
-.main {
-    grid-area: main;
-    
+.flex-websites {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+.flex-interests {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.image {
+    max-width: 25rem;
+    width: 100%;
+  height: auto;
+}
+
+
 .footer {
     grid-area: footer;
     background-color: rgb(198, 198, 198);
